// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View should render with closed overlay 1`] = `
<DocumentFragment>
  <div>
    list view mock
  </div>
</DocumentFragment>
`;

exports[`View should render with opened overlay 1`] = `
<DocumentFragment>
  <div>
    list view mock
  </div>
  <div>
    form overlay mock
  </div>
</DocumentFragment>
`;
